--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -11,8 +11,8 @@
 
     <nav>
         <a href="/home/">home</a> |
-        <a href="/about-us/">about us</a> |
-        <a href="/contact-us/">contact us</a> |
+        <a href="/aboutus.html">about us</a> |
+        <a href="/contactus.html/">contact us</a> |
         <input type="text" placeholder="Search..">
         <button type="button">search!</button>
         <a href="/reset/">reset</a>
