--- a/home.html
+++ b/home.html
@@ -3,7 +3,6 @@
 
 <head>
     <title>Travel Recommendations</title>
-
     <style>
         body, html {
             margin: 0;
@@ -25,13 +24,11 @@
 
 
 
-
-
 </head>
 
 <body>
     <nav>
-        <a href="home">Home</a> |
+        <a href="home.html">Home</a> |
         <a href="aboutus.html">About Us</a> |
         <a href="contactus.html">Contact Us</a> |
         <input type="text" id="searchInput" placeholder="Search..">
@@ -40,8 +37,8 @@
     </nav>
 
     <header style="background-image: url('landscape.jpg');">
-        <h1>Travel Recommendations</h1>
-        <p>Posted by DG</p>
+        <h1>Travel Recommendations over the whole world</h1>
+        <p>it is what it is</p>
         <p>Travel recommendations website</p>
         <button type="button" onclick="getRecommendations()">Book now!</button>
         <div id="results"></div>
