--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 ~ cd pwnely.github.io
-
 <a href="home.html">Home</a>
+<a href="home.html">Home</a>
+<a href="home.html">Home</a>
+<a href="home.html">Home</a>
+
